Move head smoothly

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,9 @@
 
 smooth motion
++ move head smoothly
+- translate cell center to simplify rotations
+- move tail smoothly
+- draw a curve at every corner
 
 obstacles
 
