--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,8 @@
 smooth motion
 + move head smoothly
 + translate cell center to simplify rotations
-- move tail smoothly
++ move tail smoothly
+- simplify head movement
 - draw a curve at every corner
 
 obstacles
