Also rotate head from cell corner

--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ smooth motion
 + move head smoothly
 + translate cell center to simplify rotations
 + move tail smoothly
-- simplify head movement
++ also rotate head from cell corner
 - draw a curve at every corner
 
 obstacles
