--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,9 @@
 
-smooth motion
-+ move head smoothly
-+ translate cell center to simplify rotations
-+ move tail smoothly
-+ also rotate head from cell corner
-- draw a curve at every corner
+movement queue
 
 obstacles
 
-movement queue
+snake pattern
 
 better progress graphics
 
