--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,8 @@ better graphics
 - randomized wall vertices
 - animated collision
 - animated eating
+- paint floor tiles
+- vary obstacle colors and textures
 - stripe?
 - hug wall?
 
